Updated installation-guide
Signed-off-by: fdelavega <fdelavega@conwet.com>